Fixed header position problem on IE6. Updated screenshot with latest header. Bumped version up to 1.3.4 .

--- a/trunk/emptiness/src/main/resources/styles/style.css
+++ b/trunk/emptiness/src/main/resources/styles/style.css
@@ -2,7 +2,7 @@
 Theme Name: Emptiness
 Theme URI: http://code.google.com/p/bitpress/wiki/Emptiness
 Description: A minimalist theme with a white background, containing mostly texts with a header image. Simple and clean, with very lightweight HTML and CSS.
-Version: 1.3.3
+Version: 1.3.4
 Author: Cliffano Subagio
 Author URI: http://blog.cliffano.com
 Tags: white, light, three-columns, fixed-width, custom-header, right-sidebar, microformats 
@@ -35,8 +35,7 @@ div#header div.main h1 {
     margin: 0;
 }
 div#bodyfooter {
-    position: relative;
-    top: 350px;
+    margin-top: 350px;
 }
 div#body {
     clear: both;
